# NifViewer

./: .gitignore  .gitmodules  CMakeLists.txt  KiWadHandler.cpp  KiWadHandler.hpp  Reader.cpp  Reader.hpp  Revive101.cpp  Revive101.h  UI.hpp  glad.c
NifParser/: Nif.cpp  Nif.hpp  NifHeader.hpp
NifParser/Blocks/: AbstractAdditionalGeometryData.hpp  NiAlphaProperty.hpp  NiAvObject.hpp  NiBillboardNode.hpp  NiBooleanExtraData.hpp  NiBound.hpp  NiDataStream.hpp  NiDynamicEffect.hpp  NiExtraData.hpp  NiFloatData.hpp  NiFloatInterpController.hpp  NiFloatInterpolator.hpp  NiGeometry.hpp  NiGeometryData.hpp  NiIntegerExtraData.hpp  NiIntegersExtraData.hpp  NiInterpController.hpp  NiInterpolator.hpp  NiKeyBasedInterpolator.hpp  NiMaterialProperty.hpp  NiMesh.hpp  NiMorphWeightsController.hpp  NiNode.hpp  NiObject.hpp  NiObjectNet.hpp  NiPalette.hpp  NiPixelData.hpp  NiPixelFormat.hpp  NiProperty.hpp  NiSingleInterpController.hpp  NiSkinInstance.hpp  NiSourceTexture.hpp  NiSpecularProperty.hpp  NiStencilProperty.hpp  NiStringExtraData.hpp  NiTexture.hpp  NiTextureTransformController.hpp  NiTexturingProperty.hpp  NiTimeController.hpp  NiTriBasedGeom.hpp  (+5 more)
NifParser/Blocks/DataStream/: DataStreamColor.hpp  DataStreamData.hpp  DataStreamIndex.hpp  DataStreamNormal.hpp  DataStreamPosition.hpp  DataStreamTexcoord.hpp
Types/: ByteColor4.hpp  Color3.hpp  Color4.hpp  Key.hpp  KeyGroup.hpp  MatchGroup.hpp  MaterialData.hpp  Matrix.hpp  Matrix22.hpp  Matrix33.hpp  MipMap.hpp  Ref.hpp  ShaderTexDesc.hpp  TexCoord.hpp  TexDesc.hpp  Triangle.hpp  Vector3.hpp
enc_temp_folder/17373af9be1ddd262c87f6aa34928c41/: NiDataStream.hpp
enc_temp_folder/17949585e7a427dc9eef97741b25/: NiTexturingProperty.hpp
enc_temp_folder/d3e6a3586f36c2c613c8308df17034a6/: TexDesc.hpp
include/glad/: glad.h
